[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bugbounty-ksp-api-client"
version = "1.0.0"
description = "Official Python SDK for BugBountyKE-KSP platform API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "BugBountyKE-KSP Team", email = "mawiralee02@gmail.com"}
]
keywords = ["bugbounty", "ksp", "api", "sdk"]
repository = "https://github.com/BugBounty-MockingBird/bugbounty-ksp-api-client"
"bug-tracker" = "https://github.com/BugBounty-MockingBird/bugbounty-ksp-api-client/issues"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/bugbounty-ksp/api-client-python"
Documentation = "https://docs.bugbounty-ksp.com/api"
Repository = "https://github.com/bugbounty-ksp/api-client-python.git"
Issues = "https://github.com/bugbounty-ksp/api-client-python/issues"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
